# Dragos-ModelPresets

./: README.md  __init__.py  gguf_loader.py  nodes.py  pyproject.toml
gguf_connector/: __init__.py  b1.py  b2.py  c.py  cg.py  const.py  cp.py  cpp.py  cs.py  d.py  d2.py  d4.py  d5.py  d6.py  d7.py  data.json  e.py  f.py  g.py  gpp.py  i.py  i2.py  lazy.py  m.py  m2.py  ma.py  menu.py  mmj.py  n.py  o.py  p.py  p1.py  p2.py  pg.py  pp.py  ps.py  q.py  q1.py  q2.py  quant.py  (+37 more)
web/: dragosModelPresets.js  loras.json  model_types.json  models.json
web/js/: dragosModelPresets.js
